# bevy-ai-chatbox

./: .gitignore  Cargo.toml  README.md  bundle.nu
.cargo/: config.toml
crates/deepseek-api/: Cargo.toml
crates/deepseek-api/src/: lib.rs  request.rs
crates/deepseek-api/src/response/: fields.rs  mod.rs  no_streaming.rs  streaming.rs
src/: config.rs  main.rs  ui_scroll.rs
src/ai/: chat.rs  config.rs  dialog.rs  mod.rs
src/ui/: mod.rs
