[package]
name = "bevy-ai-chatbox"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
reqwest = "0.12.24"
tokio = "1.48.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_winit",
    "bevy_ui_render",
    "bevy_picking",
    "bevy_log",
    "experimental_bevy_feathers",
]

[dependencies.log]
version = "*"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies]
serde = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ron = "0.11.0"
crossbeam-channel = "0.5.15"
deepseek-api = { path = "crates/deepseek-api" }

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_ui_debug",
    "bevy/bevy_dev_tools",
    "bevy/debug",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
