[package]
name = "bevy-ai-chatbox"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bevy]
version = "0.17.2"
default-features = false
features = [
    "bevy_winit",
    "bevy_ui_render",
    "bevy_picking",
    "bevy_log",
    "experimental_bevy_feathers",
]

[dependencies.deepseek-api]
git = "https://github.com/lomirus/deepseek-api.git"
rev = "34d16c316f3f3bfd4055a8841a655220ee0afc00"

[dependencies.log]
version = "*"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
ron = "0.11.0"
crossbeam-channel = "0.5.15"
reqwest = "0.12.24"
serde_json = "1.0.145"

[features]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_ui_debug",
    "bevy/bevy_dev_tools",
    "bevy/debug",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
